fixed pdf not showing

--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -212,7 +212,7 @@ body {
     color: white;
 }
 
-.projectSpecial:hover {
+.project:hover {
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
     transform: translateY(-10px);
 }
@@ -250,21 +250,15 @@ body {
     border: 1px solid #000;
 }
 
-.projectButton {
-    display: inline-block;
-    margin-top: 10px;
-    padding: 10px 20px;
-    background-color: #555;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 5px;
+.projectButtons {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 5%;
 }
 
-.projectButton:hover {
-    background-color: #333;
-}
-
-.projectLinkButton {
+.projectCodeButton {
     display: block;
     background-color: #000;
     color: #fff;
@@ -272,14 +266,33 @@ body {
     padding: 10px 20px;
     border-radius: 5px;
     text-decoration: none;
-    width: 90%;
+    width: 20%;
     transition: all 0.3s ease-in-out;
 }
 
-.projectLinkButton:hover {
+.projectCodeButton:hover {
     background-color: #fff;
     color: #000;
     border: 1px solid #000;
+}
+
+.projectViewButton {
+    display: block;
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-decoration: none;
+    width: 25%;
+    transition: all 0.3s ease-in-out;
+}
+
+.projectViewButton:hover {
+    background-color: #fff;
+    color: #000;
+    border: 1px solid #000;
+    cursor: pointer;
 }
 
 .contactContainer {
@@ -351,6 +364,19 @@ body {
 @media screen and (max-width: 1195px) {
     .name {
         font-size: 100px;
+    }
+
+    .projectButtons {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .projectCodeButton {
+        margin-bottom: 10px;
+    }
+
+    .projectViewButton {
+        width: 50%;
     }
 }
 
